--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -7,6 +7,10 @@ body {
     @apply bg-slate-600 text-slate-50
 }
 
+footer {
+    @apply bg-slate-950 text-black;
+}
+
 .dark {
     @apply bg-slate-950 text-black;
  }
