redesign; added carousel

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -14,3 +14,9 @@ footer {
 .dark {
     @apply bg-slate-950 text-black;
  }
+
+ .carousel-control-next-icon {
+    height: 100%;
+    width: 50rem;
+    color:aquamarine;
+  }
